# pearpc

./: .clang-format  .cvsignore  .gitignore  .lsp.json  AGENTS.md  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.altivec  Makefile.am  README  README.md  TODO  aclocal.m4  autogen.sh  compile  config.guess  config.h.in  config.sub  configure  configure.ac  configure.in  install-sh  missing  ppccfg.example  ppccfg.test  ylwrap
doc/: ARCHITECTURE.md  (+8 more)
scripts/: .cvsignore  Makefile.am  ifppc_down  ifppc_down.beos  ifppc_down.setuid.cc  ifppc_up  ifppc_up.beos  ifppc_up.setuid.cc  settings
scripts/debug/: check_interpreter_parity.sh  compare_dumps.py  compare_traces.py  disasm_ppc.py  dump_kernel_log.py  find_kernel_symbols.py  memdump.py  stub_audit.py
src/: .gitignore  CMakeLists.txt  Makefile.am  configparser.cc  configparser.h  info.h  main.cc  ppc_button_changecd.c  ppc_button_changecd.h  ppc_font.c  ppc_font.h  ppc_img.c  ppc_img.h
src/cpu/: CMakeLists.txt  Makefile.am  common.h  cpu.h  debug.h  mem.h  ppc_concrete_sem.h  ppc_liveness.h  ppc_liveness_sem.h  ppc_opc_decode.h  ppc_semantics_alu.h  ppc_semantics_branch.h  ppc_semantics_dispatch.h  ppc_semantics_fpu.h  ppc_semantics_mem.h  ppc_semantics_spr.h
src/cpu/cpu_generic/: .gitignore  CMakeLists.txt  Makefile.am  ppc_alu.cc  ppc_cpu.cc  ppc_cpu.h  ppc_dec.cc  ppc_dec.h  ppc_exc.cc  ppc_exc.h  ppc_fpu.cc  ppc_fpu.h  ppc_mmu.cc  ppc_mmu.h  ppc_opc.cc  ppc_vec.cc
src/cpu/cpu_jitc_aarch64/: Makefile.am  aarch64asm.cc  aarch64asm.h  jitc.cc  jitc.h  jitc_asm.h  jitc_common.h  jitc_debug.cc  jitc_debug.h  jitc_mmu.S  jitc_tools.S  jitc_types.h  jitc_validate.cc  ppc_alu.cc  ppc_alu.h  ppc_cpu.cc  ppc_cpu.h  ppc_dec.cc  ppc_dec.h  ppc_esc.h  ppc_exc.cc  ppc_exc.h  ppc_fpu.cc  ppc_fpu.h  ppc_mmu.cc  ppc_mmu.h  ppc_opc.cc  ppc_opc.h  ppc_tools.h  ppc_vec.cc  ppc_vec.h
src/cpu/cpu_jitc_x86/: CMakeLists.txt  Makefile.am  jitc.cc  jitc.h  jitc_asm.h  jitc_debug.cc  jitc_debug.h  jitc_mmu.S  jitc_mmu.asm  jitc_tools.S  jitc_tools.asm  jitc_types.h  ppc_alu.cc  ppc_alu.h  ppc_cpu.cc  ppc_cpu.h  ppc_dec.cc  ppc_dec.h  ppc_esc.cc  ppc_esc.h  ppc_exc.cc  ppc_exc.h  ppc_fpu.cc  ppc_fpu.h  ppc_mmu.cc  ppc_mmu.h  ppc_opc.cc  ppc_opc.h  ppc_vec.cc  ppc_vec.h  x86asm.cc  x86asm.h
src/cpu/cpu_jitc_x86_64/: CMakeLists.txt  Makefile.am  jitc.cc  jitc.h  jitc_asm.h  jitc_common.h  jitc_debug.cc  jitc_debug.h  jitc_mmu.S  jitc_tools.S  jitc_types.h  ppc_alu.cc  ppc_cpu.cc  ppc_cpu.h  ppc_dec.cc  ppc_dec.h  ppc_esc.cc  ppc_esc.h  ppc_exc.cc  ppc_exc.h  ppc_fpu.cc  ppc_fpu.h  ppc_mmu.cc  ppc_mmu.h  ppc_opc.cc  ppc_opc.h  ppc_tools.h  ppc_vec.cc  ppc_vec.h  x86_64asm.cc  x86_64asm.h
src/cpu_generic/: Makefile.am  ppc_alu.cc  ppc_cpu.cc  ppc_cpu.h  ppc_dec.cc  ppc_exc.cc  ppc_exc.h  ppc_fpu.cc  ppc_fpu.h  ppc_mmu.cc  ppc_opc.cc  ppc_tools.h
src/cpu_jitc_x86/: Makefile.am  jitc.cc  jitc.h  jitc_asm.h  jitc_debug.cc  jitc_debug.h  jitc_mmu.asm  jitc_tools.asm  ppc_alu.cc  ppc_cpu.cc  ppc_cpu.h  ppc_dec.cc  ppc_fpu.cc  ppc_fpu.h  ppc_mmu.cc  ppc_mmu.h  ppc_opc.cc  ppc_tools.h  x86asm.cc  x86asm.h
src/debug/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  asm.cc  asm.h  debugger.cc  debugger.h  debugparse.y  lex.h  lex.l  parsehelper.h  ppcdis.cc  ppcdis.h  ppcopc.cc  ppcopc.h  stdfuncs.cc  stdfuncs.h  tracers.h  x86dis.cc  x86dis.h  x86opc.cc  x86opc.h
src/io/: CMakeLists.txt  Makefile.am  io.cc  io.h
src/io/3c90x/: 3c90x.cc  3c90x.h  CMakeLists.txt  Makefile.am  if.h  if_posix.cc  if_posix.h
src/io/cuda/: CMakeLists.txt  Makefile.am  cuda.cc  cuda.h
src/io/graphic/: CMakeLists.txt  Makefile.am  gcard.cc  gcard.h
src/io/ide/: CMakeLists.txt  Makefile.am  ata.cc  ata.h  cd.cc  cd.h  ide.cc  ide.h  idedevice.cc  idedevice.h  scsicmds.h
src/io/macio/: CMakeLists.txt  Makefile.am  macio.cc  macio.h
src/io/nvram/: CMakeLists.txt  Makefile.am  nvram.cc  nvram.h
src/io/pci/: CMakeLists.txt  Makefile.am  pci.cc  pci.h
src/io/pic/: CMakeLists.txt  Makefile.am  pic.cc  pic.h
src/io/prom/: CMakeLists.txt  Makefile.am  fcode.cc  fcode.h  forth.cc  forth.h  forthtable.cc  forthtable.h  prom.cc  prom.h  promboot.cc  promboot.h  promdt.cc  promdt.h  prommem.cc  prommem.h  promosi.cc  promosi.h
src/io/prom/fs/: CMakeLists.txt  Makefile.am  fs.cc  fs.h  hfs.cc  hfs.h  hfsglue.h  hfsplus.cc  hfsplus.h  hfsplusglue.h  hfsstruct.h  part.cc  part.h
src/io/rtl8139/: CMakeLists.txt  Makefile.am  rtl8139.cc  rtl8139.h
src/io/serial/: CMakeLists.txt  Makefile.am  serial.cc  serial.h
src/io/usb/: CMakeLists.txt  Makefile.am  usb.cc  usb.h
src/system/: CMakeLists.txt  Makefile.am  device.cc  device.h  display.cc  display.h  event.h  file.cc  file.h  fileofs.h  font.cc  font.h  gif.cc  gif.h  keyboard.cc  keyboard.h  mouse.cc  mouse.h  sys.cc  sys.h  sysbt.h  syscdrom.h  sysclk.h  sysethtun.h  sysexcept.cc  sysexcept.h  sysfeatures.h  systhread.h  systimer.h  sysvaccel.h  sysvm.h  types.h  vt100.cc  vt100.h
src/system/arch/: CMakeLists.txt  Makefile.am  sysendian.h  sysfeatures.h
src/system/arch/generic/: Makefile.am  sysendian.h  sysfeatures.h  sysvaccel.cc
src/system/arch/x86/: CMakeLists.txt  Makefile.am  sysendian.h  sysfeatures.h  sysvaccel.cc  vaccel.S  vaccel.asm
src/system/beos/: Makefile.am  sysclipboard.cc  sysdisplay.cc  sysethtun.cc  sysfile.cc  sysinit.cc  systhread.cc  types.h
src/system/gui/: Makefile.am  gui.h
src/system/osapi/: CMakeLists.txt  Makefile.am
src/system/posix/: Makefile.am  sysclipboard.cc  sysdisplay.cc  sysethtun.cc  sysfile.cc  sysinit.cc  systhread.cc  systimer.cc  types.h
src/system/ui/: CMakeLists.txt  Makefile.am
src/system/win32/: Makefile.am  sysclipboard.cc  sysdisplay.cc  sysethtun.cc  systhread.cc  systimer.cc  tap_constants.h  types.h  vaccel.asm
src/tools/: CMakeLists.txt  Makefile.am  atom.cc  atom.h  configfile.cc  configfile.h  crc32.cc  crc32.h  cstream.h  data.cc  data.h  debug.cc  debug.h  endianess.cc  endianess.h  except.cc  except.h  regex.c  regex.h  snprintf.cc  store.cc  store.h  str.cc  str.h  stream.cc  stream.h  strtools.cc  strtools.h  thread.cc  thread.h
(+449 files in other folders)
